src/modules/login/components/LoginForm.scss
@import 'src/styles/settings/general';

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: $brand-grey;
    opacity: 1; /* Firefox */
}

.loginInput {
    height: 2.8rem;
    padding: 0.8rem;
    margin-bottom: 0.3rem;
    width: 16rem;    
}

.loginButton {
    width: 100%;
    height: 2.8rem;
    margin-top: 1rem;
    background-color: $brand-white;
    font-size: 0.9rem;
    font-weight: 300;
    outline: none;
    border: none;
}

input:-webkit-autofill {
    box-shadow: 0 0 0 30px $brand-white inset;
}

